--- a/blosgpost.html
+++ b/blosgpost.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>El titulo del Post</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<h1>Aqui vamos a hacer un blog post</h1>
