--- a/blosgpost.html
+++ b/blosgpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>El titulo del Post</title>
+	<title>Bienvenido a Hyperblog</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
