--- a/blosgpost.html
+++ b/blosgpost.html
@@ -16,6 +16,9 @@
 			<p>Los blogs son la mejor forma de comopartir información y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadísticamnete no lo eres... por ahora.</p>
 			<p>Suscribete y dale Like!!!</p>
 		</div>
+		<div id="footer">
+			Hecho con amor en Platzi <3
+		</div>
 	</div>
 	
 </body>
