--- a/blosgpost.html
+++ b/blosgpost.html
@@ -14,6 +14,9 @@
 		<div id="post">
 			<h1>Este es el titulo atractivo e interesante del post</h1>
 			<p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+			<p>
+				<img src="imagenes/equipo.jpeg" width="100%">
+			</p>
 			<p>Los blogs son la mejor forma de comopartir información y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadísticamnete no lo eres... por ahora.</p>
 			<p>Suscribete y dale Like!!!</p>
 		</div>
